# arbitrum_collab

./: .gitignore  Cargo.toml
contracts/: Cargo.toml  notes.md
contracts/src/: lib.rs
frontend/: Cargo.toml  Dioxus.toml  package-lock.json  package.json
frontend/src/: app.rs  main.rs  route.rs
frontend/src/pages/: blog.rs  home.rs  landing.rs  mod.rs
frontend/src/server/: server.rs
