[package]
name = "frontend"
version = "0.1.0"
authors = ["sushmit <sushmitsarmah@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }
dioxus-free-icons = { version = "0.8", features = ["font-awesome-brands"] }

# Debug
dioxus-logger = "0.5.1"
dioxus-hooks = "0.5.6"
reqwest = "0.12.8"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
